# MailNotifier

./: .gitignore  LICENSE  README.md  pyproject.toml  requirement.txt
mailnotifier/: __init__.py  cli.py  mailclient.py  notifier.py
